[package]
name = "memo_int_sqrt"
description = "Memoized square root and inverse square root for integers"
version = "0.1.1"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/memo-int-sqrt.git"
repository = "https://github.com/stevebob/memo-int-sqrt.git"
documentation = "https://docs.rs/memo_int_sqrt"
build = "build.rs"

[dependencies]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false
